<resources>

    <string name="app_name">AppKp</string>
    <string name="textbutton1">Skip</string>
    <string name="textbutton2">Next</string>
    <string name="onboarding_btn_text_left">Skip</string>
    <string name="onboarding_btn_text_right">Next</string>
    <string name="btn_daftar">Daftar</string>
    <string name="btn_masuk">Masuk</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="tv_judul_login">Login</string>
    <string name="tx_button_daftar">Daftar</string>
    <string name="textHead_Register">Buat Akun Anda !</string>
    <string name="textHead_Login">Masukkan Akun</string>
    <string name="textHead_Login2">Anda !</string>


    <string-array name="onboardingTitle">
        <item>Rencanakan Kesehatan</item>
        <item>Artikel mengenai covid-19</item>
        <item>Pengguna Sekitar</item>
        <item>Cek Kadar O2</item>
    </string-array>


    <string-array name="onboardingDescription">
        <item>Cek secara rutin kesehatan anda di\nlayanan kesehatan terdekat</item>
        <item>Dapatkan artikel terbaru seputar covid-19</item>
        <item>Ketahui pengguna di sekitar anda</item>
        <item>Pantau kadar O2 terlarut dalam darah</item>
    </string-array>


    <string-array name="onboardingImages">
        <item>@drawable/gambar1</item>
        <item>@drawable/gambar2</item>
        <item>@drawable/gambar3</item>
        <item>@drawable/gambar4</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="riwayat">Riwayat</string>


    <string-array name="jenisKelamin">
        <item>Laki - Laki</item>
        <item>Perempuan</item>
        <item>Lainnya</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Setup Maps Mode -->
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="btn_batalkan">Batalkan</string>
    <string name="btn_logout">Logout</string>
    <string name="apakah_anda_yakin">Apakah anda yakin?</string>


</resources>
