<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.dashboard.fragment.dialog.OptionLogoutDIalog"
    style="@style/Theme.AppCompat.Dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/apakah_anda_yakin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_batalkan"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_cancel2"
            style="@style/Widget.AppCompat.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_weight="0.5"
            android:text="@string/btn_batalkan"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/btn_logout"
            style="@style/Widget.AppCompat.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_logout"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>
