<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.auth.LoginScreenActivity">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:src="@drawable/pulse_logo"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#004FAF"
        android:text="@string/tv_judul_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="75dp"
            android:textColor="#004FAF"
            android:text="@string/et_email"/>


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Masukkan email"
            android:backgroundTint="#0074DA"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="75dp"
            android:text="@string/et_password"
            android:textColor="#004FAF"/>


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#0074DA"
            android:hint="Masukkan password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="30dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_style"
        android:text="Login" />


    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="0dp"
            android:textColor="@color/colorBlack"
            android:paddingTop="20dp"
            android:text="Belum memiliki akun?" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Daftar" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
